kube_manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aceest-fitness
  labels:
    name: aceest-fitness
    environment: production
    app: aceest-fitness-gym
